--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
 }
 
 .side-nav .btn-close{
-    padding:15px 10px 10px 25px;
+    padding:3px 10px 10px 25px;
     position: absolute;
     top:0;
     right:0;
@@ -134,3 +134,57 @@ body{
   cursor: move;
   cursor: -webkit-grabbing;
 }
+
+/* Light switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+  }
+  
+  input:checked + .slider {
+    background-color: #3b5998;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #3b5998;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
